--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,9 @@ environment:
 
 dependencies:
   args: ^2.2.0
+  github: ^8.1.1
   liquid_engine: ^0.2.2
+  pub_api_client: ^2.1.0
   yaml: ^3.1.0
 
 dev_dependencies:
